--- a/Section1--PythonIntro.ipynb
+++ b/Section1--PythonIntro.ipynb
@@ -1610,7 +1610,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "exec( open('section1.py').read()  )"
+   ]
   }
  ],
  "metadata": {
