--- a/Section2.ipynb
+++ b/Section2.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
       "Help on function mygaussian in module __main__:\n",
       "\n",
       "mygaussian(x_pts, amplitude, centroid, sigmawidth, offset)\n",
-      "    My documentation. output = A x e^[ -1/2 x (C - x)^2/sigma^2  ] + constant_offset\n",
+      "    Some documentation: output = A x e^[ -1/2 x (C - x)^2/sigma^2  ] + constant_offset\n",
       "\n"
      ]
     }
